<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!--add JLLJ-146 liuxianbang 20141117 (start)-->
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|bottom"
    android:scrollbars="none"
    android:fillViewport="true"
     >  
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"    
            android:orientation="horizontal">
            
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
                
            <TextView
                android:id="@+id/effect0"
                android:onClick="effectClick"
                android:layout_width="@dimen/overpanel_dimen"
                android:layout_height="@dimen/overpanel_dimen"
                android:text="@string/screen_effect_default"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/effect_default"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:background="@drawable/frame_white"
                android:layout_marginLeft="@dimen/overpanel_button_space_left"
                android:layout_marginBottom="@dimen/overpanel_button_space_bottom"
                android:paddingBottom="@dimen/overpanel_button_pad_bottom"
                android:textSize="12sp" />
            
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            
            <TextView
                android:id="@+id/effect1"
                android:onClick="effectClick"
                android:layout_width="@dimen/overpanel_dimen"
                android:layout_height="@dimen/overpanel_dimen"
                android:text="@string/screen_effect_fade"
                android:drawablePadding="4dp"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/effect_fade"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:background="@drawable/frame_white"
                android:layout_marginLeft="@dimen/overpanel_button_space_left"
                android:layout_marginBottom="@dimen/overpanel_button_space_bottom"
                android:paddingBottom="@dimen/overpanel_button_pad_bottom"
                android:textSize="12sp"/>
                
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            
            <TextView
                android:id="@+id/effect2"
                android:onClick="effectClick"
                android:layout_width="@dimen/overpanel_dimen"
                android:layout_height="@dimen/overpanel_dimen"
                android:text="@string/screen_effect_overlay"
                android:drawablePadding="4dp"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/effect_overlay"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:background="@drawable/frame_white"
                android:layout_marginLeft="@dimen/overpanel_button_space_left"
                android:layout_marginBottom="@dimen/overpanel_button_space_bottom"
                android:paddingBottom="@dimen/overpanel_button_pad_bottom"
                android:textSize="12sp" />
            
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
                
            <TextView
                android:id="@+id/effect3"
                android:onClick="effectClick"
                android:layout_width="@dimen/overpanel_dimen"
                android:layout_height="@dimen/overpanel_dimen"
                android:text="@string/screen_effect_perturbed"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/effect_perturbed"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:background="@drawable/frame_white"
                android:layout_marginLeft="@dimen/overpanel_button_space_left"
                android:layout_marginBottom="@dimen/overpanel_button_space_bottom"
                android:paddingBottom="@dimen/overpanel_button_pad_bottom"
                android:textSize="12sp" />
            
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            
            <TextView
                android:id="@+id/effect4"
                android:onClick="effectClick"
                android:layout_width="@dimen/overpanel_dimen"
                android:layout_height="@dimen/overpanel_dimen"
                android:text="@string/screen_effect_rotate"
                android:drawablePadding="4dp"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/effect_rotate"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:background="@drawable/frame_white"
                android:layout_marginLeft="@dimen/overpanel_button_space_left"
                android:layout_marginBottom="@dimen/overpanel_button_space_bottom"
                android:paddingBottom="@dimen/overpanel_button_pad_bottom"
                android:textSize="12sp"/>
                
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            
            <TextView
                android:id="@+id/effect5"
                android:onClick="effectClick"
                android:layout_width="@dimen/overpanel_dimen"
                android:layout_height="@dimen/overpanel_dimen"
                android:text="@string/screen_effect_cube"
                android:drawablePadding="4dp"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/effect_cube"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:background="@drawable/frame_white"
                android:layout_marginLeft="@dimen/overpanel_button_space_left"
                android:layout_marginBottom="@dimen/overpanel_button_space_bottom"
                android:paddingBottom="@dimen/overpanel_button_pad_bottom"
                android:textSize="12sp" />
                    
            <Space
                android:layout_width="@dimen/overpanel_button_space_left"
                android:layout_height="match_parent"/>
            
        </LinearLayout>
</HorizontalScrollView>
<!--add JLLJ-146 liuxianbang 20141117 (end)-->
